# Nepfluence

./: AGENT_PROMPT_backend.md  AGENT_PROMPT_frontend_brand.md  AGENT_PROMPT_frontend_creator.md  CLAUDE.md  CONTRACT.md  DECISIONS_ADDENDUM.md  GAP_ANALYSIS_AUDIT.md  MASTER_AGENT_PROMPT.md  PROJECT_DOCUMENTATION.md  README.md  ROLE_ASSIGNMENTS.md  TEAM_SPLIT_AND_GIT_WORKFLOW.md
Backend/: .env  (+3 more)
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/versions/: 20260711_0001_add_conversation_soft_delete.py
backend/scripts/: seed_super_admin.py
backend/scripts/accuracy/: ground_truth.yaml  run_accuracy_test.py
backend/src/: auth.py  config.py  database.py  email_utils.py  google_auth.py  main.py
backend/src/admin/: audit.py  crud.py  deps.py  enums.py  models.py  permissions.py  routes.py  routes_audit_log.py  routes_campaigns.py  routes_escrow.py  routes_users.py  schemas.py
backend/src/brand_profile/: crud.py  image_utils.py  models.py  routes.py  schemas.py
backend/src/campaign/: crud.py  enums.py  image_utils.py  models.py  routes.py  schemas.py
backend/src/campaign_proposal/: crud.py  enums.py  models.py  routes.py  schemas.py
backend/src/collaboration/: admin_crud.py  crud.py  enums.py  models.py  payout_math.py  routes.py  schemas.py
backend/src/contact/: __init__.py  routes.py
backend/src/conversations/: __init__.py  models.py  routes.py  schemas.py
backend/src/influencer_profile/: crud.py  enums.py  models.py  routes.py  schemas.py  utils.py
backend/src/marketplace/: __init__.py  routes.py  schemas.py  scoping.py
(+207 files in other folders)
